[metadata]
name = python-laravel-queue
version = 0.0.1b2
author = Sinan Bekar
author_email = sinanbekar.work@gmail.com
description = Sync Laravel queue with Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sinanbekar/python-laravel-queue
project_urls =
    Bug Tracker = https://github.com/sinanbekar/python-laravel-queue/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    redis
    pyee
    
    

[options.packages.find]
where = src